--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
                     <a href="#gallery" class="text-gray-600 hover:text-green-800 font-medium">Gallery</a>
                     <a href="#notices" class="text-gray-600 hover:text-green-800 font-medium">Notices</a>
                     <a href="#contact" class="text-gray-600 hover:text-green-800 font-medium">Contact</a>
+                    <a href="amin/index.html" class="text-gray-600 hover:text-green-800 font-medium">Admin</a>
                     <button class="bg-green-800 text-white px-4 py-2 rounded-md hover:bg-green-700 transition">Donate
                         Now</button>
                 </div>
